--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             I help small businesses and designers bring good ideas to life. Shall we chat?</p>
             <div class="links__presentation">
                 <h2 class="subtitle__links__presentation">Access my social networks:</h2>
-            <a class="link__links__presentation" href="https://github.com/"><img src="./assets/github.png"> GitHub 
+            <a class="link__links__presentation" href="https://github.com/LauraGavira3"><img src="./assets/github.png"> GitHub 
             </a>
             <a class="link__links__presentation" href="https://www.linkedin.com/in/laura-gavira-446040213/"><img src="./assets/linkedin.png"> LinkedIn 
             </a>
