--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </a>
             </div>
         </section>
-            <img class="imag__presentation" src="./assets/image 1.png" alt="photo">
+            <img class="imag__presentation" src="./assets/robo.webp" alt="photo">
     </main>
     <footer class="footer">
         <p>Developed by Gavira.</p>
